--- a/ai_photo_generator/prompt.ipynb
+++ b/ai_photo_generator/prompt.ipynb
@@ -510,7 +510,7 @@
     "            temperature=0.1\n",
     "        )\n",
     "        return response.choices[0].message.content.strip()\n",
-    "API_KEY = \"tpsg-yr0s0fEn0QpJi1HUSHP9dXaDmNd0WlP\"\n",
+    "API_KEY = \"oops\"\n",
     "\n",
     "contest = Model(API_KEY)\n",
     "\n",
