--- a/ai_photo_generator/prompt.ipynb
+++ b/ai_photo_generator/prompt.ipynb
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c7ee77a9",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
     "            temperature=0.1\n",
     "        )\n",
     "        return response.choices[0].message.content.strip()\n",
-    "API_KEY = \"oops\"\n",
+    "API_KEY = input('api key')\n",
     "\n",
     "contest = Model(API_KEY)\n",
     "\n",
